// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<InkomenSpecificaties /> Jaaropgave > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0 _InkomenSpecificaties_028dc4 _SpecificationsTable--annualStatements_028dc4"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Inkomen"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="28px"
          viewBox="0 0 32 28"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M21,4 L21,0 L0,4 L0,28 L32,28 L32,4 L21,4 Z M28,18 L17,18 L17,14 L28,14 L28,18 Z M28,12 L15,12 L15,20 L28,20 L28,24 L4,24 L4,8 L28,8 L28,12 Z"
            id="Shape"
          />
          <rect
            height="2"
            id="Rectangle"
            width="3"
            x="18"
            y="15"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-links-icoon"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Inkomen
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Bijstandsuitkering
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    />
    <section
      class="_Section_dac924 _TableSection_028dc4"
    >
      <h3
        class="ams-heading ams-heading--level-3 _Title_dac924 _TitleWithItems_dac924"
      >
        Jaaropgaven
      </h3>
      <button
        aria-expanded="false"
        class="_Button_c3ab45 _Button__secondary-inverted_c3ab45 _SearchButton_028dc4"
      >
        Zoeken
        <i
          class="_SearchButtonIcon_028dc4"
        >
          ◢
        </i>
      </button>
      <table
        class="_Table_a66dcc _SpecificationsTable_028dc4"
      >
        <thead>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayProp_a66dcc"
            />
            <th
              class="_DisplayProp_a66dcc"
            >
              Datum
            </th>
            <th
              class="_DisplayProp_a66dcc"
            >
              Documenten
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Jaaropgave
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                04 januari 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Jaaropgave
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                04 januari 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Jaaropgave
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                28 januari 2011
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Jaaropgave
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                28 januari 2011
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </main>
</DocumentFragment>
`;

exports[`<InkomenSpecificaties /> Uitkering > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0 _InkomenSpecificaties_028dc4"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Inkomen"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="28px"
          viewBox="0 0 32 28"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M21,4 L21,0 L0,4 L0,28 L32,28 L32,4 L21,4 Z M28,18 L17,18 L17,14 L28,14 L28,18 Z M28,12 L15,12 L15,20 L28,20 L28,24 L4,24 L4,8 L28,8 L28,12 Z"
            id="Shape"
          />
          <rect
            height="2"
            id="Rectangle"
            width="3"
            x="18"
            y="15"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            aria-label="chevron-links-icoon"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Inkomen
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Bijstandsuitkering
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    />
    <section
      class="_Section_dac924 _TableSection_028dc4"
    >
      <h3
        class="ams-heading ams-heading--level-3 _Title_dac924 _TitleWithItems_dac924"
      >
        Uitkeringsspecificaties
      </h3>
      <button
        aria-expanded="false"
        class="_Button_c3ab45 _Button__secondary-inverted_c3ab45 _SearchButton_028dc4"
      >
        Zoeken
        <i
          class="_SearchButtonIcon_028dc4"
        >
          ◢
        </i>
      </button>
      <table
        class="_Table_a66dcc _SpecificationsTable_028dc4"
      >
        <thead>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayProp_a66dcc"
            />
            <th
              class="_DisplayProp_a66dcc"
            >
              Regeling
            </th>
            <th
              class="_DisplayProp_a66dcc"
            >
              Datum
            </th>
            <th
              class="_DisplayProp_a66dcc"
            >
              Documenten
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Participatiewet
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                18 mei 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                18 mei 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                19 april 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Participatiewet
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                19 april 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Participatiewet
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                23 maart 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                23 maart 2019
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                WWB
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                18 januari 2014
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Participatiewet
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                18 mei 2012
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                18 mei 2012
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="_TableRow_a66dcc"
          >
            <td
              class="_DisplayPropTitle_a66dcc"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Datum:
              </span>
              <span>
                19 april 2012
              </span>
            </td>
            <td
              class="_DisplayProp_a66dcc"
            >
              <span
                class="_DisplayPropLabel_a66dcc"
              >
                Documenten:
              </span>
              <span
                class="_DocumentLinkWrap_81c3b4"
              >
                <a
                  class="ams-link ams-link--standalone _MaRouterLink__no-default-underline_aa758a"
                  href="http://bff-api-host/api/v1/services/wpi/document/test-encrypted-id?isBulk=false&isDms=false"
                >
                  <span
                    class="_DocumentLinkIcon_81c3b4"
                  >
                    <span
                      class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                    >
                      <svg
                        aria-label="sluiten-icoon"
                        focusable="false"
                        height="32px"
                        viewBox="0 0 32 32"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                  </span>
                  PDF
                </a>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        aria-label="Pagina navigatie"
        class="_Pagination_5caf80 _Pagination_028dc4"
      >
        <div
          class="_PageList_5caf80"
        >
          <button
            aria-current="true"
            aria-label="Huidige pagina, pagina 1"
            class="_PageSelectButton_5caf80 _SelectedPage_5caf80"
          >
            1
          </button>
          <button
            aria-current="false"
            aria-label="Ga naar pagina 2"
            class="_PageSelectButton_5caf80"
          >
            2
          </button>
          <button
            aria-label="Ga naar de volgende pagina"
            class="_PageSelectButton_5caf80 _PageNextButton_5caf80"
          >
            volgende 
            <svg
              aria-hidden="true"
              aria-label="chevron-rechts-icoon"
              focusable="false"
              height="32px"
              viewBox="0 0 32 32"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <polygon
                points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
              />
            </svg>
          </button>
        </div>
      </nav>
    </section>
  </main>
</DocumentFragment>
`;
